--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native-loading-spinner-overlay": "^1.0.1",
     "react-native-reanimated": "^1.4.0",
     "react-native-segmented-control-tab": "^3.4.1",
+    "react-native-size-matters": "^0.3.0",
     "react-native-vector-icons": "^6.6.0",
     "react-native-youtube": "^2.0.0",
     "react-navigation": "^4.0.10",
