--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/netinfo": "^5.5.0",
     "react": "16.9.0",
     "react-native": "0.61.4",
     "react-native-gesture-handler": "^1.4.1",
+    "react-native-google-places-autocomplete": "^1.4.1",
     "react-native-loading-spinner-overlay": "^1.0.1",
     "react-native-reanimated": "^1.4.0",
     "react-native-segmented-control-tab": "^3.4.1",
