--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native-gesture-handler": "^1.4.1",
     "react-native-google-places-autocomplete": "^1.4.1",
     "react-native-loading-spinner-overlay": "^1.0.1",
+    "react-native-material-dropdown": "^0.11.1",
     "react-native-reanimated": "^1.4.0",
     "react-native-segmented-control-tab": "^3.4.1",
     "react-native-size-matters": "^0.3.0",
